--- a/Video002VariaveisConst/Exemplo003Video002.html
+++ b/Video002VariaveisConst/Exemplo003Video002.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo001Video002</title>
+    <title>Exemplo004Video002</title>
 </head>
 <body>
-   <script>
-       // Faça aparecer a mensagem Olá mundo no seu navegador . 
-       alert ('Olá mundo ! ')
-   </script>
+    <script>
+        /* Declare uma cosntante quantidadeDeGraos e impima seu valor 
+        const quantidadeDeGraos=10;
+        alert (quantidadeDeGraos);
+        
+    </script>
+    
 </body>
 </html>
