--- a/Video002VariaveisConst/Exemplo004Video002.html
+++ b/Video002VariaveisConst/Exemplo004Video002.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo002Video002</title>
-  
+    <title>Exemplo005Video002</title>
 </head>
 <body>
     <script>
-        var numero = prompt ("Número: ");
-        var quadruplo = numero * 4; 
-        alert("O quadruplo é : " + quadruplo );
+        entraNoBloco=true; 
+
+        if(entraNoBloco == true){
+            let  mensagem = "Ola galera do";
+            mensagem += ' HDCode'; 
+            alert (mensagem); 
+        }
+
+        
     </script>
     
 </body>
