--- a/Video002VariaveisConst/Exemplo004Video002.html
+++ b/Video002VariaveisConst/Exemplo004Video002.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo005Video002</title>
+    <title>Exemplo004Video002</title>
 </head>
 <body>
     <script>
         entraNoBloco=true; 
 
         if(entraNoBloco == true){
-            let  mensagem = "Ola galera do";
-            mensagem += ' HDCode'; 
+            let  mensagem = "Ola galera!"
+
             alert (mensagem); 
         }
-
+        //alert (mensagem); Não funcionaria , pois o let só funciona a um nível local, ou seja, detro do bloco de 
+        //código que ocorreu sua declaração. 
         
     </script>
     
