atualizações pdf e exercício

--- a/Video002VariaveisConst/Exemplo004Video002.html
+++ b/Video002VariaveisConst/Exemplo004Video002.html
@@ -12,10 +12,11 @@
 
         if(entraNoBloco == true){
             let  mensagem = "Ola galera!"
+            // o let é parecido com o var , poderiamos modificar os valores da variável mensagem 
 
             alert (mensagem); 
         }
-        //alert (mensagem); Não funcionaria , pois o let só funciona a um nível local, ou seja, detro do bloco de 
+        //alert (mensagem); Não funcionaria , pois o let só funciona a um nível local, ou seja, dentro do bloco de 
         //código que ocorreu sua declaração. 
         
     </script>
