--- a/Video004Exercícios/Exercicio005Video004.html
+++ b/Video004Exercícios/Exercicio005Video004.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <script>
-       nota1 = Number(prompt('Informe a primeiro nota :' ));
+       nota1 = Number(prompt('Informe a primeira nota :' ));
        nota2 = Number(prompt('Informe a segunda  nota :' ));
        nota3 = Number(prompt('Informe a terceira nota :' ));
 
